Prevented divide by 0, fixed CSS alignment issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -35,7 +35,9 @@ h1 {
 
 #buttons {
   display: grid;
-  padding: 0px;
+  width: 372px;
+  position: relative;
+  right: 1px;
   margin: 0px;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 5em 5em 5em 5em 5em;
